[package]
name = "constellation-server"
version = "1.15.0"
description = "Pluggable authoritative DNS server. Entries can be added & removed from an HTTP REST API."
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
homepage = "https://github.com/valeriansaliou/constellation"
repository = "https://github.com/valeriansaliou/constellation.git"
keywords = ["dns", "api"]
categories = ["web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[[bin]]
name = "constellation"
path = "src/main.rs"
doc = false

[dependencies]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
strip = true
